--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LibraryManagementSystem.Components"
+        xmlns:local="clr-namespace:LibraryManagementSystem"
+        xmlns:com="clr-namespace:LibraryManagementSystem.Components"
         mc:Ignorable="d"
         Title="MainWindow" Height="780" Width="1280" AllowsTransparency="True" WindowStyle="None" WindowStartupLocation="CenterScreen"
         Background="Transparent">
@@ -12,7 +13,7 @@
         <Grid>
             <!-- Define Columns -->
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="260"/>
+                <ColumnDefinition Width="240"/>
                 <!-- Fixed-width for the menu -->
                 <ColumnDefinition Width="*"/>
                 <!-- Flexible width for main content -->
@@ -35,35 +36,83 @@
                     </LinearGradientBrush>
                 </Border.Background>
 
+                
+                
+
                 <!-- ListBox for NavButton items -->
                 <ListBox x:Name="sidebar" SelectionMode="Single" SelectionChanged="sidebar_SelectionChanged" Margin="10,50,10,50" BorderThickness="0" Background="Transparent">
                     <!-- Example NavButton entries -->
-                    <local:NavButton Margin="3" Padding="16" Icon="M 0,0 L 10,0 L 10,10 L 0,10 Z" Navitem="Home"/>
-                    <local:NavButton Margin="3" Padding="16" Icon="M 0,0 L 10,0 L 10,10 L 0,10 Z" Navitem="Library"/>
-                    <local:NavButton Margin="3" Padding="16" Icon="M 0,0 L 10,0 L 10,10 L 0,10 Z" Navitem="Settings"/>
+                    <com:NavButton Margin="3" Padding="16" Icon="M490.134,185.472L338.966,34.304c-45.855-45.737-120.076-45.737-165.931,0L21.867,185.472   C7.819,199.445-0.055,218.457,0,238.272v221.397C0.047,488.568,23.475,511.976,52.374,512h407.253   c28.899-0.023,52.326-23.432,52.373-52.331V238.272C512.056,218.457,504.182,199.445,490.134,185.472z M448,448H341.334v-67.883   c0-44.984-36.467-81.451-81.451-81.451c0,0,0,0,0,0h-7.765c-44.984,0-81.451,36.467-81.451,81.451l0,0V448H64V238.272   c0.007-2.829,1.125-5.541,3.115-7.552L218.283,79.552c20.825-20.831,54.594-20.835,75.425-0.01c0.003,0.003,0.007,0.007,0.01,0.01   L444.886,230.72c1.989,2.011,3.108,4.723,3.115,7.552V448z" Navitem="Home" Navlink="Pages/DashBoard.xaml"/>
+                    <com:NavButton Margin="3" Padding="16" Icon="M17,12.663v-1.663h-3.5c-1.972-.034-1.971-2.966,0-3h3.5v-1.663c0-.891,1.077-1.337,1.707-.707l3.163,3.163c.391,.391,.391,1.024,0,1.414l-3.163,3.163c-.63,.63-1.707,.184-1.707-.707Zm6,3.837v2c0,3.038-2.462,5.5-5.5,5.5H5.5c-2.378,0-4.341-1.859-4.5-4.197V5.5C1,2.462,3.462,0,6.5,0h11c1.966,0,3.783,1.052,4.765,2.753,.361,.625,.277,1.455-.266,1.93-.756,.661-1.883,.422-2.327-.423-.435-.828-1.38-1.26-2.316-1.26h-7.356V15h11.5c.828,0,1.5,.672,1.5,1.5ZM4,5.5V15.276c.471-.168,.971-.276,1.5-.276h1.5V3h-.5c-1.381,0-2.5,1.119-2.5,2.5Zm16,12.5H5.5c-1.972,.035-1.97,2.965,0,3h12c1.379,0,2.5-1.122,2.5-2.5v-.5Z" Navitem="Lend Books"/>
+                    <com:NavButton Margin="3" Padding="16" Icon="m1.513,13c-.828-.038-1.538-.742-1.5-1.57C.313,5.021,5.579,0,12,0c2.485,0,4.883.775,6.894,2.189l1.393-1.393c.632-.632,1.713-.184,1.713.71v4.491c0,.554-.449,1.004-1.004,1.004h-4.49c-.894,0-1.342-1.081-.71-1.714l.939-.939c-1.412-.875-3.047-1.348-4.735-1.348C7.184,3,3.235,6.765,3.01,11.57c-.038.804-.701,1.43-1.498,1.43Zm21.046-1.998c-.855-.031-1.53.601-1.568,1.428-.226,4.806-4.174,8.57-8.99,8.57-1.687,0-3.322-.473-4.735-1.348l.939-.939c.632-.632.184-1.714-.71-1.714H3.004c-.554,0-1.004.449-1.004,1.004v4.491c0,.894,1.081,1.342,1.713.71l1.393-1.393c2.01,1.414,4.408,2.189,6.893,2.189,6.421,0,11.687-5.021,11.986-11.43.039-.828-.601-1.53-1.428-1.568Zm-5.559-1.002v4c0,1.105-.895,2-2,2h-6c-1.105,0-2-.895-2-2v-4c0-1.105.895-2,2-2h6c1.105,0,2,.895,2,2Zm-3.5,1c0-.552-.448-1-1-1h-1c-.552,0-1,.448-1,1s.448,1,1,1h1c.552,0,1-.448,1-1Z" Navitem="Return Books"/>
+                    <com:NavButton Margin="3" Padding="16" Icon="m22.775 1.747a3.407 3.407 0 0 0 -2.795-.737l-5.9 1.073a4.348 4.348 0 0 0 -2.083 1 4.343 4.343 0 0 0 -2.083-1l-5.894-1.073a3.41 3.41 0 0 0 -4.02 3.354v16.524l12 2.182 12-2.182v-16.524a3.4 3.4 0 0 0 -1.225-2.617zm-12.275 18-7.5-1.363v-14.02a.41.41 0 0 1 .482-.4l5.9 1.073a1.363 1.363 0 0 1 1.118 1.338zm10.5-1.363-7.5 1.364v-13.373a1.363 1.363 0 0 1 1.12-1.341l5.9-1.072a.408.408 0 0 1 .482.4z" Navitem="Books" Navlink="Pages/Books.xaml"/>
+                    <com:NavButton Margin="3" Padding="16" Icon="m7.5 13a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-6a1.5 1.5 0 1 0 1.5 1.5 1.5 1.5 0 0 0 -1.5-1.5zm7.5 13.5a5.506 5.506 0 0 0 -5.5-5.5h-4a5.506 5.506 0 0 0 -5.5 5.5v3.5h3v-3.5a2.5 2.5 0 0 1 2.5-2.5h4a2.5 2.5 0 0 1 2.5 2.5v3.5h3zm2.5-11.5a4.5 4.5 0 1 1 4.5-4.5 4.505 4.505 0 0 1 -4.5 4.5zm0-6a1.5 1.5 0 1 0 1.5 1.5 1.5 1.5 0 0 0 -1.5-1.5zm6.5 13.5a5.506 5.506 0 0 0 -5.5-5.5h-3.5v3h3.5a2.5 2.5 0 0 1 2.5 2.5v3.5h3z" Navitem="Members" Navlink="Pages/Members.xaml"/>
+                    <com:NavButton Margin="3" Padding="16" Icon="M15,6c0-3.309-2.691-6-6-6S3,2.691,3,6s2.691,6,6,6,6-2.691,6-6Zm-6,3c-1.654,0-3-1.346-3-3s1.346-3,3-3,3,1.346,3,3-1.346,3-3,3Zm-.012,6.314c.103,.822-.48,1.571-1.303,1.674-2.627,.328-4.686,2.749-4.686,5.512,0,.829-.671,1.5-1.5,1.5s-1.5-.671-1.5-1.5c0-4.249,3.213-7.977,7.314-8.488,.818-.106,1.571,.48,1.674,1.303Zm14.012,3.184l-.638-.376c.084-.362,.138-.735,.138-1.123s-.054-.76-.138-1.123l.638-.376c.714-.42,.952-1.34,.531-2.054-.421-.714-1.34-.95-2.054-.531l-.648,.382c-.523-.471-1.144-.825-1.83-1.043v-.755c0-.829-.671-1.5-1.5-1.5s-1.5,.671-1.5,1.5v.755c-.686,.218-1.307,.572-1.83,1.043l-.648-.382c-.713-.418-1.632-.183-2.054,.531-.42,.714-.183,1.633,.531,2.054l.638,.376c-.084,.362-.138,.735-.138,1.123s.054,.76,.138,1.123l-.638,.376c-.714,.42-.952,1.34-.531,2.054,.28,.475,.78,.739,1.294,.739,.259,0,.521-.067,.76-.208l.648-.382c.523,.471,1.144,.825,1.83,1.043v.755c0,.829,.671,1.5,1.5,1.5s1.5-.671,1.5-1.5v-.755c.686-.218,1.307-.572,1.83-1.043l.648,.382c.239,.141,.501,.208,.76,.208,.514,0,1.014-.264,1.294-.739,.42-.714,.183-1.633-.531-2.054Zm-5.5,.001c-.827,0-1.5-.673-1.5-1.5s.673-1.5,1.5-1.5,1.5,.673,1.5,1.5-.673,1.5-1.5,1.5Z" Navitem="Settings" Navlink="Pages/Settings.xaml"/>
+
                 </ListBox>
             </Border>
 
 
             <!-- Header -->
-            <Border Grid.Column="1" Grid.Row="0" CornerRadius="10" Margin="20,0,0,20">
+            <Border Grid.Column="1" Grid.Row="0" CornerRadius="10" Margin="20,0,0,20" Padding="10">
                 <Border.Background>
                     <LinearGradientBrush>
-                        <GradientStop Color="#fb7154" Offset="0" />
-                        <GradientStop Color="#fb7154" Offset="0.8" />
+                        <GradientStop Color="white" Offset="0" />
+                        <GradientStop Color="white" Offset="0.8" />
                     </LinearGradientBrush>
                 </Border.Background>
+
+                <!-- Nested Grid to Partition the Header -->
+                <Grid>
+                    <!-- Define 4 Columns -->
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="60" />
+                        <!-- Block 1: User Image -->
+                        <ColumnDefinition Width="2*" />
+                        <!-- Block 2: Name & Type -->
+                        <ColumnDefinition Width="*" />
+                        <!-- Block 3: Empty -->
+                        <ColumnDefinition Width="150" />
+                        <!-- Block 4: Sign Out Button -->
+                    </Grid.ColumnDefinitions>
+
+                    <!-- Block 1: User Image -->
+                    <Image Grid.Column="0" Source="E:\LibraryManagementSystem\Assets\Screenshot 2024-11-15 183330.png" Width="50" Height="50" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" 
+                    Stretch="UniformToFill" ClipToBounds="True" >
+                        
+                    </Image>
+
+                    <!-- Block 2: User Name and Type -->
+                    <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10 0 0 0" >
+                        <TextBlock Text="Hello, John Doe" FontSize="16" FontWeight="Bold" Foreground="Black" />
+                        <TextBlock Text="Admin" FontSize="12" Foreground="black" />
+                    </StackPanel>
+
+                    <!-- Block 4: Sign Out Button 
+                    <Border Grid.Column="3" Width="100" Height="40" Margin="10"
+                        HorizontalAlignment="Right" VerticalAlignment="Center"
+                        Background="#ff5733" CornerRadius="10" BorderBrush="White" BorderThickness="1">
+                        <TextBlock Text="Sign Out" Foreground="White" FontSize="12" FontWeight="Bold"
+                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Border.InputBindings>
+                            <MouseBinding MouseAction="LeftClick" Command="{Binding SignOutCommand}" />
+                        </Border.InputBindings>
+                    </Border>-->
+
+                </Grid>
             </Border>
+
 
             <!-- Main Content -->
             <Border Grid.Column="1" Grid.Row="1" CornerRadius="10" Margin="20,0,0,0">
                 <Border.Background>
                     <LinearGradientBrush>
-                        <GradientStop Color="#fb7154" Offset="0" />
-                        <GradientStop Color="#fb7154" Offset="0.8" />
+                        <GradientStop Color="White" Offset="0" />
+                        <GradientStop Color="White" Offset="0.8" />
                     </LinearGradientBrush>
                 </Border.Background>
-                <Frame x:Name="navframe" NavigationUIVisibility="Hidden">
+                <Frame x:Name="navframe" NavigationUIVisibility="Hidden" Padding="10">
                     <!-- Frame content goes here -->
                 </Frame>
             </Border>
