--- a/Pages/BooksView.xaml
+++ b/Pages/BooksView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LibraryManagementSystem.Pages.Members"
+﻿<Page x:Class="LibraryManagementSystem.Pages.Books"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,10 +7,10 @@
       xmlns:vm="clr-namespace:LibraryManagementSystem.ViewModels"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Members">
+      Title="Books">
 
     <Page.DataContext>
-        <vm:MemberViewModel/>
+        <vm:BookViewModel />
     </Page.DataContext>
 
     <Page.Resources>
@@ -20,14 +20,14 @@
             <Setter Property="Foreground" Value="White" />
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="Padding" Value="10,5" />
-
+         
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="BorderBrush" Value="Transparent" />
             <Setter Property="Width" Value="100" />
             <Setter Property="Height" Value="35" />
             <Setter Property="HorizontalAlignment" Value="Center" />
             <Setter Property="VerticalAlignment" Value="Center" />
-
+          
         </Style>
 
         <!-- Secondary Button Style -->
@@ -36,16 +36,17 @@
             <Setter Property="Foreground" Value="#333333" />
             <Setter Property="FontWeight" Value="Normal" />
             <Setter Property="Padding" Value="10,5" />
-
+    
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="BorderBrush" Value="#CCCCCC" />
             <Setter Property="Width" Value="100" />
             <Setter Property="Height" Value="35" />
             <Setter Property="HorizontalAlignment" Value="Center" />
             <Setter Property="VerticalAlignment" Value="Center" />
-
+            
         </Style>
     </Page.Resources>
+
 
     <Grid>
         <!-- Define Columns -->
@@ -65,7 +66,7 @@
         </Grid.RowDefinitions>
 
         <!-- Title Section -->
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Members Management" 
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Books Management" 
                    FontSize="24" FontWeight="Bold" VerticalAlignment="Center"
                    Margin="10,5,0,0"/>
 
@@ -73,10 +74,10 @@
         <Border Grid.Row="0" Grid.Column="1" Width="160" Height="45" Margin="10"
                         HorizontalAlignment="Right" VerticalAlignment="Center"
                         Background="#ff5733" CornerRadius="10" BorderBrush="White" BorderThickness="1">
-            <TextBlock Text="Add Member" Foreground="White" FontSize="14" FontWeight="Bold"
+            <TextBlock Text="Add Book" Foreground="White" FontSize="14" FontWeight="Bold"
                         HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <Border.InputBindings>
-
+                <MouseBinding Gesture="LeftClick" Command="{Binding OpenAddPopupCommand}"  />
             </Border.InputBindings>
         </Border>
 
@@ -97,27 +98,35 @@
                     <!-- TextBox -->
                     <TextBox Margin="35,0,10,0" Background="Transparent" 
                      BorderThickness="0" VerticalAlignment="Center" 
-                     FontSize="14"  />
+                     FontSize="14" Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
             </Border>
         </StackPanel>
 
 
         <!-- Books Table -->
-        <DataGrid Grid.Row="2" ItemsSource="{Binding Member}" SelectedItem="{Binding SelectedMember}" Grid.ColumnSpan="3" AutoGenerateColumns="False" 
+        <DataGrid Grid.Row="2" ItemsSource="{Binding FilteredBooks}" SelectedItem="{Binding SelectedBook, Mode=TwoWay}"  Grid.ColumnSpan="2" AutoGenerateColumns="False" 
                   HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                   Margin="10" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="MemberID" Binding="{Binding MemberID}"  Width="*"/>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}"  Width="*"/>
-                <DataGridTextColumn Header="ContactInfo" Binding="{Binding ContactInfo}"  Width="*"/>
-                <DataGridTextColumn Header="MembershipDate" Binding="{Binding MembershipDate}"  Width="*"/>
+                <DataGridTextColumn Header="Book Name"  Width="*" Binding="{Binding Title}"/>
+                <DataGridTextColumn Header="Author"  Width="*" Binding="{Binding Author}"/>
+                <DataGridTextColumn Header="ISBN"  Width="*" Binding="{Binding ISBN}"/>
+                <DataGridTextColumn Header="Genre"  Width="*" Binding="{Binding GenreID}" />
+                <DataGridTextColumn Header="Availability"  Width="*" Binding="{Binding Availability}" />
                 <DataGridTemplateColumn Header="Actions" Width="150">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                <Button Content="Edit" Command="{Binding DataContext.OpenPopupCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Margin="5,0" Width="60" />
-                                <Button Content="Delete" Margin="5,0" Width="60" />
+                                <Button Content="Edit" 
+                                Command="{Binding DataContext.OpenEditPopupCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" 
+                                CommandParameter="{Binding}" 
+                                Margin="5,0" Width="60" />
+                                <Button Content="Delete" 
+                                Command="{Binding DataContext.DeleteBookCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" 
+                                CommandParameter="{Binding}" 
+                                Margin="5,0" Width="60" />
+
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -125,7 +134,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Popup IsOpen="{Binding IsPopupOpen}" Placement="Center" StaysOpen="True" DataContext="{Binding}">
+        <Popup IsOpen="{Binding IsEditPopupOpen}" Placement="Center" StaysOpen="True" DataContext="{Binding}">
             <Border Background="White" Padding="20" CornerRadius="10" Width="400" Height="300" >
                 <Grid>
                     <!-- Close Icon -->
@@ -144,22 +153,74 @@
                     <!-- Main Content -->
                     <StackPanel Margin="0,30,0,0">
                         <TextBlock Text="Edit Book" FontWeight="Bold" FontSize="18" Margin="0,0,0,10" TextAlignment="Center" />
-                        <TextBox Text="{Binding SelectedMember.MemberID}" Margin="0,5"  />
-                        <TextBox Text="{Binding SelectedMember.Name}" Margin="0,5"  />
-                        <TextBox Text="{Binding SelectedMember.ContactInfo}" Margin="0,5"  />
-                        <TextBox Text="{Binding SelectedMember.MembershipDate}" Margin="0,5"  />
-
-
-
+                        <TextBox Text="{Binding SelectedBook.Title}" Margin="0,5"  />
+                        <TextBox Text="{Binding SelectedBook.Author}" Margin="0,5"  />
+                        <TextBox Text="{Binding SelectedBook.ISBN}" Margin="0,5"  />
+                        <TextBox Text="{Binding SelectedBook.GenreID}" Margin="0,5"  />
 
                         <!-- Buttons -->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-                            <Button Content="Save" Command="{Binding SaveCommand}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}"/>
+                            <Button Content="Save" Command="{Binding UpdateBookCommand}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}"/>
                             <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" Style="{StaticResource SecondaryButtonStyle}"/>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
             </Border>
         </Popup>
+
+        <!-- Add Book Popup -->
+        <Popup IsOpen="{Binding IsAddPopupOpen}" Placement="Center" StaysOpen="True" DataContext="{Binding}">
+            <Border Background="White" Padding="20" CornerRadius="10" Width="450" Height="Auto" 
+            BorderBrush="LightGray" BorderThickness="1">
+                <Grid>
+                    <!-- Close Icon -->
+                    <Button Content="✖" 
+                    Command="{Binding ClosePopupCommand}" 
+                    HorizontalAlignment="Right" 
+                    VerticalAlignment="Top" 
+                    Background="Transparent" 
+                    BorderBrush="Transparent" 
+                    Foreground="Gray"
+                    FontSize="16"
+                    Width="30" Height="30"
+                    ToolTip="Close"
+                    Margin="5,5,0,0"/>
+
+                    <!-- Main Content -->
+                    <StackPanel Margin="10">
+                        <!-- Popup Title -->
+                        <TextBlock Text="Add Book Details" 
+                           FontWeight="Bold" 
+                           FontSize="20" 
+                           TextAlignment="Center" 
+                           Margin="0,0,0,15" />
+
+                        <!-- Input Fields -->
+                        <StackPanel Margin="0,10,0,0">
+                            <TextBlock Text="Book Title:" FontWeight="SemiBold" Margin="0,5" />
+                            <TextBox Text="{Binding NewBook.Title, UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
+
+                            <TextBlock Text="Author:" FontWeight="SemiBold" Margin="0,5" />
+                            <TextBox Text="{Binding NewBook.Author,UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
+
+                            <TextBlock Text="ISBN:" FontWeight="SemiBold" Margin="0,5" />
+                            <TextBox Text="{Binding NewBook.ISBN,UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
+
+                            <TextBlock Text="Genre:" FontWeight="SemiBold" Margin="0,5" />
+                            <TextBox Text="{Binding NewBook.GenreID,UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
+                        </StackPanel>
+
+                        <!-- Buttons -->
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                            <Button Content="Add Book" Command="{Binding AddBookCommand}" IsEnabled="{Binding AddBookCommand.CanExecute, Mode=OneWay}"/>
+                            <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" />
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </Popup>
+
+
+
     </Grid>
 </Page>
