--- a/Pages/Members.xaml
+++ b/Pages/Members.xaml
@@ -76,7 +76,7 @@
             <TextBlock Text="Add Member" Foreground="White" FontSize="14" FontWeight="Bold"
                         HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <Border.InputBindings>
-
+                <MouseBinding Gesture="LeftClick" Command="{Binding OpenAddPopupCommand}"  />
             </Border.InputBindings>
         </Border>
 
@@ -97,13 +97,13 @@
                     <!-- TextBox -->
                     <TextBox Margin="35,0,10,0" Background="Transparent" 
                      BorderThickness="0" VerticalAlignment="Center" 
-                     FontSize="14"  />
+                     FontSize="14" Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}"  />
                 </Grid>
             </Border>
         </StackPanel>
 
 
-        <!-- Books Table -->
+        <!-- Member Table -->
         <DataGrid Grid.Row="2" ItemsSource="{Binding Member}" SelectedItem="{Binding SelectedMember}" Grid.ColumnSpan="3" AutoGenerateColumns="False" 
                   HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                   Margin="10" IsReadOnly="True">
@@ -116,8 +116,8 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                <Button Content="Edit" Command="{Binding DataContext.OpenPopupCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Margin="5,0" Width="60" />
-                                <Button Content="Delete" Margin="5,0" Width="60" />
+                                <Button Content="Edit" Command="{Binding DataContext.OpenEditPopupCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Margin="5,0" Width="60" />
+                                <Button Content="Delete" Command="{Binding DataContext.DeleteMemberCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Margin="5,0" Width="60" />
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -125,7 +125,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Popup IsOpen="{Binding IsPopupOpen}" Placement="Center" StaysOpen="True" DataContext="{Binding}">
+        <Popup IsOpen="{Binding IsEditPopupOpen}" Placement="Center" StaysOpen="True" DataContext="{Binding}">
             <Border Background="White" Padding="20" CornerRadius="10" Width="400" Height="300" >
                 <Grid>
                     <!-- Close Icon -->
@@ -144,18 +144,60 @@
                     <!-- Main Content -->
                     <StackPanel Margin="0,30,0,0">
                         <TextBlock Text="Edit Book" FontWeight="Bold" FontSize="18" Margin="0,0,0,10" TextAlignment="Center" />
-                        <TextBox Text="{Binding SelectedMember.MemberID}" Margin="0,5"  />
                         <TextBox Text="{Binding SelectedMember.Name}" Margin="0,5"  />
                         <TextBox Text="{Binding SelectedMember.ContactInfo}" Margin="0,5"  />
-                        <TextBox Text="{Binding SelectedMember.MembershipDate}" Margin="0,5"  />
-
-
-
 
                         <!-- Buttons -->
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-                            <Button Content="Save" Command="{Binding SaveCommand}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}"/>
+                            <Button Content="Save" Command="{Binding UpdateMemberCommand}" Margin="5,0" Style="{StaticResource PrimaryButtonStyle}"/>
                             <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" Style="{StaticResource SecondaryButtonStyle}"/>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </Popup>
+
+        <!-- Add Member Popup -->
+        <Popup IsOpen="{Binding IsAddPopupOpen}" Placement="Center" StaysOpen="True" DataContext="{Binding}">
+            <Border Background="White" Padding="20" CornerRadius="10" Width="450" Height="Auto" 
+            BorderBrush="LightGray" BorderThickness="1">
+                    <Grid>
+                        <!-- Close Icon -->
+                        <Button Content="✖" 
+                    Command="{Binding ClosePopupCommand}" 
+                    HorizontalAlignment="Right" 
+                    VerticalAlignment="Top" 
+                    Background="Transparent" 
+                    BorderBrush="Transparent" 
+                    Foreground="Gray"
+                    FontSize="16"
+                    Width="30" Height="30"
+                    ToolTip="Close"
+                    Margin="5,5,0,0"/>
+
+                    <!-- Main Content -->
+                    <StackPanel Margin="10">
+                        <!-- Popup Title -->
+                        <TextBlock Text="Add Book Details" 
+                      FontWeight="Bold" 
+                      FontSize="20" 
+                      TextAlignment="Center" 
+                      Margin="0,0,0,15" />
+
+                        <!-- Input Fields -->
+                        <StackPanel Margin="0,10,0,0">
+                            <TextBlock Text="Book Title:" FontWeight="SemiBold" Margin="0,5" />
+                            <TextBox Text="{Binding NewMember.Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
+
+                            <TextBlock Text="Author:" FontWeight="SemiBold" Margin="0,5" />
+                            <TextBox Text="{Binding NewMember.ContactInfo,UpdateSourceTrigger=PropertyChanged}" Margin="0,5" />
+
+                        </StackPanel>
+
+                        <!-- Buttons -->
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                            <Button Content="Add Book" Command="{Binding AddMemberCommand}" IsEnabled="{Binding AddMemberCommand.CanExecute, Mode=OneWay}"/>
+                            <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="5,0" />
                         </StackPanel>
                     </StackPanel>
                 </Grid>
